// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Renders 1`] = `
<styled.button
  variant="secondary"
>
  Text
</styled.button>
`;

exports[`Button Renders airbnb primary 1`] = `
<ContextProvider
  value={
    Object {
      "buttons": Object {
        "primary": Object {
          "backgroundColor": "#008489",
          "border": "1px solid #008489",
          "borderRadius": "8px",
          "color": "#ffffff",
          "cursor": "pointer",
          "fontFamily": "Montserrat",
          "fontSize": "12px",
          "fontWeight": 700,
          "height": "44px",
          "width": "183px",
        },
        "secondary": Object {
          "backgroundColor": "#ffffff",
          "border": "1px solid #008489",
          "borderRadius": "8px",
          "color": "#008489",
          "cursor": "pointer",
          "fontFamily": "Montserrat",
          "fontSize": "12px",
          "fontWeight": 700,
          "height": "44px",
          "width": "183px",
        },
      },
    }
  }
>
  <Button
    primary={true}
  >
    Text
  </Button>
</ContextProvider>
`;

exports[`Button Renders figma primary 1`] = `
<ContextProvider
  value={
    Object {
      "buttons": Object {
        "primary": Object {
          "&:active": Object {
            "transform": "translateY(1px)",
          },
          "&:hover": Object {
            "transform": "translateY(-2px)",
          },
          "backgroundColor": "#000000",
          "border": "3px solid #000000",
          "borderRadius": "8px",
          "color": "#ffffff",
          "cursor": "pointer",
          "fontFamily": "Lato",
          "fontSize": "16px",
          "fontWeight": 700,
          "height": "42px",
          "transition": "transform 200ms,background 200ms",
          "width": "302px",
        },
        "secondary": Object {
          "&:active": Object {
            "transform": " translateY(1px)",
          },
          "&:hover ": Object {
            "transform": "translateY(-2px)",
          },
          "backgroundColor": "#ffffff",
          "border": "3px solid #000000",
          "borderRadius": "8px",
          "color": "#000000",
          "cursor": "pointer",
          "fontFamily": "Lato",
          "fontSize": "16px",
          "fontWeight": 700,
          "height": "42px",
          "transition": "transform 200ms,background 200ms",
          "width": "302px",
        },
      },
    }
  }
>
  <Button
    primary={true}
  >
    Text
  </Button>
</ContextProvider>
`;

exports[`Button Renders primary 1`] = `
<styled.button
  variant="primary"
>
  Text
</styled.button>
`;

exports[`Button Renders secondary 1`] = `
<styled.button
  variant="secondary"
>
  Text
</styled.button>
`;

exports[`Button Renders spotify primary 1`] = `
<ContextProvider
  value={
    Object {
      "buttons": Object {
        "primary": Object {
          "&:active": Object {
            "backgroundColor": "#14833b",
            "transform": "scale(1)",
          },
          "&:hover": Object {
            "backgroundColor": "#1ed760",
            "transform": "scale(1.04)",
          },
          "backgroundColor": "#1db954",
          "border": "none",
          "borderRadius": "500px",
          "color": "#ffffff",
          "cursor": "pointer",
          "fontFamily": "Montserrat",
          "fontSize": "14px",
          "fontWeight": 700,
          "height": "48px",
          "textTransform": "uppercase",
          "transition": "all 33ms",
          "width": "214px",
        },
        "secondary": Object {
          "&:active": Object {
            "transform": "scale(1)",
          },
          "&:hover": Object {
            "transform": "scale(1.04)",
          },
          "backgroundColor": "transparent",
          "border": "2px solid #000000",
          "borderRadius": "500px",
          "color": "#000000",
          "cursor": "pointer",
          "fontFamily": "Montserrat",
          "fontSize": "14px",
          "fontWeight": 700,
          "height": "48px",
          "textTransform": "uppercase",
          "transition": "all 33ms",
          "width": "214px",
        },
      },
    }
  }
>
  <Button
    primary={true}
  >
    Text
  </Button>
</ContextProvider>
`;

exports[`Button Renders spotify secondary 1`] = `
<ContextProvider
  value={
    Object {
      "buttons": Object {
        "primary": Object {
          "&:active": Object {
            "backgroundColor": "#14833b",
            "transform": "scale(1)",
          },
          "&:hover": Object {
            "backgroundColor": "#1ed760",
            "transform": "scale(1.04)",
          },
          "backgroundColor": "#1db954",
          "border": "none",
          "borderRadius": "500px",
          "color": "#ffffff",
          "cursor": "pointer",
          "fontFamily": "Montserrat",
          "fontSize": "14px",
          "fontWeight": 700,
          "height": "48px",
          "textTransform": "uppercase",
          "transition": "all 33ms",
          "width": "214px",
        },
        "secondary": Object {
          "&:active": Object {
            "transform": "scale(1)",
          },
          "&:hover": Object {
            "transform": "scale(1.04)",
          },
          "backgroundColor": "transparent",
          "border": "2px solid #000000",
          "borderRadius": "500px",
          "color": "#000000",
          "cursor": "pointer",
          "fontFamily": "Montserrat",
          "fontSize": "14px",
          "fontWeight": 700,
          "height": "48px",
          "textTransform": "uppercase",
          "transition": "all 33ms",
          "width": "214px",
        },
      },
    }
  }
>
  <Button>
    Text
  </Button>
</ContextProvider>
`;
